<resources>
    <string name="app_name">Just Java</string>
    <string name="enter_name">Enter name</string>
    <string name="toppings">Toppings</string>
    <string name="choco">Chocolate</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="total">Total</string>
    <string name="ty">Thank you!</string>
    <string name="order_submited_name">Name: </string>
    <string name="increment_toast">You cannot have more than 100 coffees.</string>
    <string name="decrement_toast">You cannon have less than 1 coffee.</string>
    <string name="email_subject">JustJava order for</string>
</resources>
